# nav_waypoint_manager

./: LICENSE
nav_waypoint_bringup/: CMakeLists.txt  package.xml
nav_waypoint_bringup/config/: route.yaml  waypoints.yaml
nav_waypoint_bringup/launch/: waypoint_manager.launch.py
nav_waypoint_conversion/: CMakeLists.txt  package.xml
nav_waypoint_conversion/src/: nav_waypoint_to_pose_stamped_node.cpp  pose_stamped_to_nav_waypoint_node.cpp
nav_waypoint_manager/: CMakeLists.txt  package.xml
nav_waypoint_msgs/: CMakeLists.txt  package.xml
nav_waypoint_msgs/msg/: Route.msg  Waypoint.msg  Waypoints.msg
nav_waypoint_server/: CMakeLists.txt  package.xml
nav_waypoint_server/src/: nav_route_server_node.cpp  nav_route_server_node_params.yaml  nav_waypoint_server_node.cpp  nav_waypoint_server_node_params.yaml
nav_waypoint_visualization/: CMakeLists.txt  package.xml
nav_waypoint_visualization/src/: nav_waypoint_interactive_marker_node.cpp  nav_waypoint_interactive_marker_node_params.yaml  nav_waypoint_visualization_marker_node.cpp
